corrigindo fluxo de inclusao de opcao.... adesao nao filtra por MEI

--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -344,7 +344,7 @@
               </div>
 
               <div *ngIf="isCategoriaEmpresarial()" style="width: 40%; text-align: right">
-                <mat-slide-toggle name="mei" (ngModelChange)="modelChangeMEI($event)" [(ngModel)]="opcaoEditando.mei" [disabled]="!adicionandoOpcao() && !editandoOpcao()" labelPosition="before">Contempla MEI</mat-slide-toggle>
+                <mat-slide-toggle name="mei" (ngModelChange)="modelChangeMEI($event)" [(ngModel)]="opcaoEditando.mei" [disabled]="(!adicionandoOpcao() && !editandoOpcao()) || !operadoraAutoCompleteControl.value?.id" labelPosition="before">Contempla MEI</mat-slide-toggle>
               </div>
             </div>
 
