--- a/src/app/components/cotacao/cotacao.component.html
+++ b/src/app/components/cotacao/cotacao.component.html
@@ -15,98 +15,103 @@
         </span>
       </mat-card-title>
       <mat-card-content>
+        <form #formCotacao="ngForm" (submit)="consultaCotacao()">
+          <div style="margin-top: 40px; margin-bottom: 30px">
+            <mat-radio-group name="categoria" style="width: 50%" (ngModelChange)="modelChangeCategoria($event)" [(ngModel)]="filtroCotacao.categoria">
+              <mat-radio-button style="padding-right: 15px" *ngFor="let categoria of todasCategorias" [value]="categoria">
+                {{categoria}}
+              </mat-radio-button>
+            </mat-radio-group>
+            <span *ngIf="isCotacaoEmpresarial()" style="padding-left: 20px;">
+              <mat-slide-toggle name="mei" [(ngModel)]="filtroCotacao.mei" labelPosition="before">MEI</mat-slide-toggle>
+            </span>
 
-        <div style="margin-top: 40px; margin-bottom: 30px">
-          <mat-radio-group style="width: 50%" (ngModelChange)="modelChangeCategoria($event)" [(ngModel)]="filtroCotacao.categoria">
-            <mat-radio-button style="padding-right: 15px" *ngFor="let categoria of todasCategorias" [value]="categoria">
-              {{categoria}}
-            </mat-radio-button>
-          </mat-radio-group>
-          <span *ngIf="isCotacaoEmpresarial()" style="padding-left: 20px;">
-            <mat-slide-toggle [(ngModel)]="filtroCotacao.mei" labelPosition="before">MEI</mat-slide-toggle>
-          </span>
+            <span style="float: right;">
+              <span style="padding-left: 20px">
+                <mat-slide-toggle name="menorPrecoProduto" [(ngModel)]="menorPrecoProduto" labelPosition="before">Melhor Preço</mat-slide-toggle>
+              </span>
+              <span style="padding-left: 20px">
+                <mat-slide-toggle name="modoCliente" (ngModelChange)="alteraModo($event)" [(ngModel)]="modoCliente" labelPosition="before">Modo Cliente</mat-slide-toggle>
+              </span>
+            </span>
+          </div>
 
-          <span style="float: right;">
-            <mat-slide-toggle (ngModelChange)="alteraModo($event)" [(ngModel)]="modoCliente" labelPosition="before">Modo Cliente</mat-slide-toggle>
-          </span>
-        </div>
+          <div>
+            <mat-form-field appearance="outline" [style.width]="isCotacaoEmpresarial() ? '25%' : '33.3%'">
+              <mat-label>Estado</mat-label>
+              <input matInput name="estado" [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto1" type="text">
+              <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="estadoDisplayFn">
+                <mat-option *ngFor="let estado of estadoFilteredOptions | async" [value]="estado">
+                  {{estado.nome}}
+                </mat-option>
+              </mat-autocomplete>
+            </mat-form-field>
 
-        <div>
-          <mat-form-field appearance="outline" [style.width]="isCotacaoEmpresarial() ? '25%' : '33.3%'">
-            <mat-label>Estado</mat-label>
-            <input matInput [formControl]="estadoAutoCompleteControl" [matAutocomplete]="auto1" type="text">
-            <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" [displayWith]="estadoDisplayFn">
-              <mat-option *ngFor="let estado of estadoFilteredOptions | async" [value]="estado">
-                {{estado.nome}}
-              </mat-option>
-            </mat-autocomplete>
-          </mat-form-field>
+            <mat-form-field *ngIf="isCotacaoEmpresarial()" appearance="outline" [style.width]="isCotacaoEmpresarial() ? '25%' : '33%'">
+              <mat-label>Tipo Adesão</mat-label>
+              <mat-select name="tipoAdesao" [(ngModel)]="filtroCotacao.tipoAdesao">
+                <mat-option [value]="'livreAdesao'">Livre Adesão</mat-option>
+                <mat-option [value]="'compulsoria'">Compulsória</mat-option>
+              </mat-select>
+            </mat-form-field>
 
-          <mat-form-field *ngIf="isCotacaoEmpresarial()" appearance="outline" [style.width]="isCotacaoEmpresarial() ? '25%' : '33%'">
-            <mat-label>Tipo Adesão</mat-label>
-            <mat-select [(ngModel)]="filtroCotacao.tipoAdesao">
-              <mat-option [value]="'livreAdesao'">Livre Adesão</mat-option>
-              <mat-option [value]="'compulsoria'">Compulsória</mat-option>
-            </mat-select>
-          </mat-form-field>
+            <mat-form-field appearance="outline" [style.width]="isCotacaoEmpresarial() ? '25%' : '33.3%'">
+              <mat-label>Coparticipação</mat-label>
+              <mat-select name="coparticipacao" [(ngModel)]="filtroCotacao.coparticipacao">
+                <mat-option [value]="false">Sem</mat-option>
+                <mat-option [value]="true">Com</mat-option>
+                <mat-option [value]="''">Todas</mat-option>
+              </mat-select>
+            </mat-form-field>
 
-          <mat-form-field appearance="outline" [style.width]="isCotacaoEmpresarial() ? '25%' : '33.3%'">
-            <mat-label>Coparticipação</mat-label>
-            <mat-select [(ngModel)]="filtroCotacao.coparticipacao">
-              <mat-option [value]="false">Sem</mat-option>
-              <mat-option [value]="true">Com</mat-option>
-              <mat-option [value]="''">Todas</mat-option>
-            </mat-select>
-          </mat-form-field>
+            <mat-form-field appearance="outline" [style.width]="isCotacaoEmpresarial() ? '25%' : '33.3%'">
+              <mat-label>Acomodação</mat-label>
+              <mat-select name="acomodacao" [(ngModel)]="filtroCotacao.acomodacao">
+                <mat-option [value]="''">Todas</mat-option>
+                <mat-option *ngFor="let acomodacao of todasAcomodacoes;" [value]="acomodacao">{{acomodacao}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
 
-          <mat-form-field appearance="outline" [style.width]="isCotacaoEmpresarial() ? '25%' : '33.3%'">
-            <mat-label>Acomodação</mat-label>
-            <mat-select [(ngModel)]="filtroCotacao.acomodacao">
-              <mat-option [value]="''">Todas</mat-option>
-              <mat-option *ngFor="let acomodacao of todasAcomodacoes;" [value]="acomodacao">{{acomodacao}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
+          <div>
+            <mat-form-field appearance="outline" [style.width]="filtroCotacao.categoria === 'Adesão' ? '33.33%' : '100%'">
+              <mat-label>Operadora</mat-label>
+              <mat-select name="operadora" [(ngModel)]="filtroCotacao.operadoras" multiple>
+                <mat-option *ngFor="let operadora of todasOperadoras" [value]="operadora">{{operadora.nome}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline" *ngIf="isCotacaoAdesao()" style="width: 33.33%">
+              <mat-label>Administradora</mat-label>
+              <mat-select name="administradora" [(ngModel)]="filtroCotacao.administradoras" multiple>
+                <mat-option *ngFor="let administradora of todasAdministradoras" [value]="administradora">{{administradora.nome}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field *ngIf="isCotacaoAdesao()" appearance="outline" style="width: 33.33%">
+              <mat-label>Profissões</mat-label>
+              <mat-select name="profissoes" [(ngModel)]="filtroCotacao.profissoes" multiple>
+                <mat-option *ngFor="let profissao of todasProfissoes" [value]="profissao">{{profissao.nome}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
 
-        <div>
-          <mat-form-field appearance="outline" [style.width]="filtroCotacao.categoria === 'Adesão' ? '33.33%' : '100%'">
-            <mat-label>Operadora</mat-label>
-            <mat-select [(ngModel)]="filtroCotacao.operadoras" multiple>
-              <mat-option *ngFor="let operadora of todasOperadoras" [value]="operadora">{{operadora.nome}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field appearance="outline" *ngIf="isCotacaoAdesao()" style="width: 33.33%">
-            <mat-label>Administradora</mat-label>
-            <mat-select [(ngModel)]="filtroCotacao.administradoras" multiple>
-              <mat-option *ngFor="let administradora of todasAdministradoras" [value]="administradora">{{administradora.nome}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field *ngIf="isCotacaoAdesao()" appearance="outline" style="width: 33.33%">
-            <mat-label>Profissões</mat-label>
-            <mat-select [(ngModel)]="filtroCotacao.profissoes" multiple>
-              <mat-option *ngFor="let profissao of todasProfissoes" [value]="profissao">{{profissao.nome}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
+          <div>
+            <mat-form-field appearance="outline" style="width: 50%">
+              <mat-label>Idades Titulares</mat-label>
+              <mat-chip-list #chipList1 aria-label="Fruit selection">
+                <mat-chip  *ngFor="let vida of filtroCotacao.titulares"
+                           (removed)="removeIdadeTitular(vida)">
+                  {{vida}}
+                  <mat-icon matChipRemove>cancel</mat-icon>
+                </mat-chip>
+                <input name="idadesTitulares" type="number" placeholder="Idades..."
+                       [matChipInputFor]="chipList1"
+                       [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                       [matChipInputAddOnBlur]="true"
+                       (matChipInputTokenEnd)="addIdadeTitular($event)">
+              </mat-chip-list>
+            </mat-form-field>
 
-        <div>
-          <mat-form-field appearance="outline" style="width: 50%">
-            <mat-label>Idades Titulares</mat-label>
-            <mat-chip-list #chipList1 aria-label="Fruit selection">
-              <mat-chip  *ngFor="let vida of filtroCotacao.titulares"
-                         (removed)="removeIdadeTitular(vida)">
-                {{vida}}
-                <mat-icon matChipRemove>cancel</mat-icon>
-              </mat-chip>
-              <input type="number" placeholder="Idades..."
-                     [matChipInputFor]="chipList1"
-                     [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                     [matChipInputAddOnBlur]="true"
-                     (matChipInputTokenEnd)="addIdadeTitular($event)">
-            </mat-chip-list>
-          </mat-form-field>
-
-          <mat-form-field appearance="outline" style="width: 50%">
+            <mat-form-field appearance="outline" style="width: 50%">
               <mat-label>Idades Dependentes</mat-label>
               <mat-chip-list #chipList2 aria-label="Fruit selection">
                 <mat-chip  *ngFor="let vida of filtroCotacao.dependentes"
@@ -114,57 +119,59 @@
                   {{vida}}
                   <mat-icon matChipRemove>cancel</mat-icon>
                 </mat-chip>
-                <input type="number" placeholder="Idades..."
+                <input name="idadesDependentes" type="number" placeholder="Idades..."
                        [matChipInputFor]="chipList2"
                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                        [matChipInputAddOnBlur]="true"
                        (matChipInputTokenEnd)="addIdadeDependente($event)">
               </mat-chip-list>
-          </mat-form-field>
-        </div>
+            </mat-form-field>
+          </div>
 
-        <div style="text-align: center">
-          <mat-form-field appearance="outline" style="width: 7%">
-            <mat-label>0 - 18</mat-label>
-            <input type="number" matInput placeholder="0 a 18" [ngModel]="filtroCotacao.qtdVidas0a18anos" [disabled]="true">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 7%">
-            <mat-label>19 - 23</mat-label>
-            <input type="number" matInput placeholder="19 a 23" [ngModel]="filtroCotacao.qtdVidas19a23anos" [disabled]="true">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 7%">
-            <mat-label>24 - 28</mat-label>
-            <input type="number" matInput placeholder="24 a 28" [ngModel]="filtroCotacao.qtdVidas24a28anos" [disabled]="true">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 7%">
-            <mat-label>29 - 33</mat-label>
-            <input type="number" matInput placeholder="29 a 33" [ngModel]="filtroCotacao.qtdVidas29a33anos" [disabled]="true">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 7%">
-            <mat-label>34 - 38</mat-label>
-            <input type="number" matInput placeholder="34 a 38" [ngModel]="filtroCotacao.qtdVidas34a38anos" [disabled]="true">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 7%">
-            <mat-label>39 - 43</mat-label>
-            <input type="number" matInput placeholder="39 a 43" [ngModel]="filtroCotacao.qtdVidas39a43anos" [disabled]="true">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 7%">
-            <mat-label>44 - 48</mat-label>
-            <input type="number" matInput placeholder="44 a 48" [ngModel]="filtroCotacao.qtdVidas44a48anos" [disabled]="true">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 7%">
-            <mat-label>49 - 53</mat-label>
-            <input type="number" matInput placeholder="49 a 53" [ngModel]="filtroCotacao.qtdVidas49a53anos" [disabled]="true">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 7%">
-            <mat-label>54 - 58</mat-label>
-            <input type="number" matInput placeholder="54 a 58" [ngModel]="filtroCotacao.qtdVidas54a58anos" [disabled]="true">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 7%">
-            <mat-label>59 - Mais</mat-label>
-            <input type="number" matInput placeholder="59 ou Mais" [ngModel]="filtroCotacao.qtdVidas59ouMaisAnos" [disabled]="true">
-          </mat-form-field>
-        </div>
+          <div style="text-align: center">
+            <mat-form-field appearance="outline" style="width: 7%">
+              <mat-label>0 - 18</mat-label>
+              <input name="qtdVidas0a18anos" type="number" matInput placeholder="0 a 18" [ngModel]="filtroCotacao.qtdVidas0a18anos" [disabled]="true">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 7%">
+              <mat-label>19 - 23</mat-label>
+              <input name="qtdVidas19a23anos" type="number" matInput placeholder="19 a 23" [ngModel]="filtroCotacao.qtdVidas19a23anos" [disabled]="true">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 7%">
+              <mat-label>24 - 28</mat-label>
+              <input name="qtdVidas24a28anos" type="number" matInput placeholder="24 a 28" [ngModel]="filtroCotacao.qtdVidas24a28anos" [disabled]="true">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 7%">
+              <mat-label>29 - 33</mat-label>
+              <input name="qtdVidas29a33anos" type="number" matInput placeholder="29 a 33" [ngModel]="filtroCotacao.qtdVidas29a33anos" [disabled]="true">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 7%">
+              <mat-label>34 - 38</mat-label>
+              <input name="qtdVidas34a38anos" type="number" matInput placeholder="34 a 38" [ngModel]="filtroCotacao.qtdVidas34a38anos" [disabled]="true">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 7%">
+              <mat-label>39 - 43</mat-label>
+              <input name="qtdVidas39a43anos" type="number" matInput placeholder="39 a 43" [ngModel]="filtroCotacao.qtdVidas39a43anos" [disabled]="true">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 7%">
+              <mat-label>44 - 48</mat-label>
+              <input name="qtdVidas44a48anos" type="number" matInput placeholder="44 a 48" [ngModel]="filtroCotacao.qtdVidas44a48anos" [disabled]="true">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 7%">
+              <mat-label>49 - 53</mat-label>
+              <input name="qtdVidas49a53anos" type="number" matInput placeholder="49 a 53" [ngModel]="filtroCotacao.qtdVidas49a53anos" [disabled]="true">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 7%">
+              <mat-label>54 - 58</mat-label>
+              <input name="qtdVidas54a58anos" type="number" matInput placeholder="54 a 58" [ngModel]="filtroCotacao.qtdVidas54a58anos" [disabled]="true">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 7%">
+              <mat-label>59 - Mais</mat-label>
+              <input name="qtdVidas59ouMaisAnos" type="number" matInput placeholder="59 ou Mais" [ngModel]="filtroCotacao.qtdVidas59ouMaisAnos" [disabled]="true">
+            </mat-form-field>
+          </div>
+          <button type="submit" hidden></button>
+        </form>
       </mat-card-content>
     </mat-card>
   </div>
