--- a/src/app/components/cotacao/cotacao.component.html
+++ b/src/app/components/cotacao/cotacao.component.html
@@ -28,7 +28,7 @@
 
             <span style="float: right;">
               <span style="padding-left: 20px">
-                <mat-slide-toggle name="menorPrecoProduto" [(ngModel)]="menorPrecoProduto" labelPosition="before">Melhor Preço</mat-slide-toggle>
+                <mat-slide-toggle name="melhorPrecoProduto" (ngModelChange)="modelChangeMelhorPreco()" [(ngModel)]="melhorPrecoProduto" labelPosition="before">Melhor Preço</mat-slide-toggle>
               </span>
               <span style="padding-left: 20px">
                 <mat-slide-toggle name="modoCliente" (ngModelChange)="alteraModo($event)" [(ngModel)]="modoCliente" labelPosition="before">Modo Cliente</mat-slide-toggle>
